--- a/latest/grouping.html
+++ b/latest/grouping.html
@@ -13,7 +13,14 @@ Table with 2 rows, 2 columns:
 x  m
 ──────
 1  5.7
-2  3.3</code></pre></div><a class="source-link" target="_blank" href="https://github.com/piever/JuliaDBMeta.jl/blob/7cbdda53644691afddd0d5f4925230362b859db8/src/groupby.jl#L16-L48">source</a></section><h2><a class="nav-anchor" id="Column-wise-macros-with-grouping-argument-1" href="#Column-wise-macros-with-grouping-argument-1">Column-wise macros with grouping argument</a></h2><p><a href="column_macros.html#Column-wise-macros-1">Column-wise macros</a> accept an optional grouping argument:</p><pre><code class="language-julia">iris = loadtable(Pkg.dir(&quot;JuliaDBMeta&quot;, &quot;test&quot;, &quot;tables&quot;, &quot;iris.csv&quot;))
+2  3.3</code></pre><p>When the summary function returns an iterable, use <code>flatten=true</code> to flatten the result:</p><pre><code class="language-julia-repl">julia&gt; @groupby(t, :x, flatten = true, select = {:y+1})
+Table with 4 rows, 2 columns:
+x  y + 1
+────────
+1  5
+1  7
+2  6
+2  8</code></pre></div><a class="source-link" target="_blank" href="https://github.com/piever/JuliaDBMeta.jl/blob/a1bb2403205d8240f2fc7ba4647ecf6b63412a96/src/groupby.jl#L16-L61">source</a></section><h2><a class="nav-anchor" id="Column-wise-macros-with-grouping-argument-1" href="#Column-wise-macros-with-grouping-argument-1">Column-wise macros with grouping argument</a></h2><p><a href="column_macros.html#Column-wise-macros-1">Column-wise macros</a> accept an optional grouping argument:</p><pre><code class="language-julia">iris = loadtable(Pkg.dir(&quot;JuliaDBMeta&quot;, &quot;test&quot;, &quot;tables&quot;, &quot;iris.csv&quot;))
 @where_vec iris :Species :SepalLength .&gt; mean(:SepalLength)</code></pre><p>Use <code>flatten=true</code> to flatten the result:</p><pre><code class="language-julia">@where_vec iris :Species flatten=true :SepalLength .&gt; mean(:SepalLength)</code></pre><h2><a class="nav-anchor" id="Pipeline-with-grouping-argument-1" href="#Pipeline-with-grouping-argument-1">Pipeline with grouping argument</a></h2><p><a href="pipeline_macros.html#JuliaDBMeta.@apply"><code>@apply</code></a> also accepts an optional grouping argument:</p><pre><code class="language-julia">@apply iris :Species flatten = true begin
    @map {:SepalWidth, Ratio = :SepalLength / :SepalWidth}
    sort(_, :SepalWidth, rev = true)
