--- a/dev/tutorial/index.html
+++ b/dev/tutorial/index.html
@@ -33,7 +33,7 @@ UniqueCarrier  DepDelay
 &quot;WN&quot;           78</code></pre><p>Piping:</p><pre><code class="language-julia">select(flights, (:UniqueCarrier, :DepDelay)) |&gt; @where !ismissing(:DepDelay) &amp;&amp; :DepDelay &gt; 60</code></pre><p>where the variable <code>x</code> denotes our data at each stage. At the beginning it is <code>flights</code>, then it only has the two relevant columns and, at the last step, it is filtered.</p><p>To avoid the parenthesis and to use the <code>_</code> curryfication syntax, you can use the <code>@apply</code> macro instead:</p><pre><code class="language-julia">@apply flights begin
     select(_, (:UniqueCarrier, :DepDelay))
     @where !ismissing(:DepDelay) &amp;&amp; :DepDelay &gt; 60
-end</code></pre><h2><a class="nav-anchor" id="Apply-a-function-row-by-row-1" href="#Apply-a-function-row-by-row-1">Apply a function row by row</a></h2><p>To apply a function row by row, use <code>@map</code>: the first argument is the dataset, the second is the expression you want to compute (symbols are columns):</p><pre><code class="language-julia">speed = @map flights :Distance / :AirTime * 60</code></pre><pre><code class="language-none">227496-element DataValues.DataValueArray{Float64,1}:
+end</code></pre><h2><a class="nav-anchor" id="Apply-a-function-row-by-row-1" href="#Apply-a-function-row-by-row-1">Apply a function row by row</a></h2><p>To apply a function row by row, use <code>@map</code>: the first argument is the dataset, the second is the expression you want to compute (symbols are columns):</p><pre><code class="language-julia">speed = @map flights :Distance / :AirTime * 60</code></pre><pre><code class="language-none">227496-element Array{Union{Missing, Float64},1}:
  336.0  
  298.667
  280.0  
@@ -61,7 +61,7 @@ end</code></pre><h2><a class="nav-anchor" id="Apply-a-function-row-by-row-1" hre
  424.688
  460.678</code></pre><h2><a class="nav-anchor" id="Add-new-variables-1" href="#Add-new-variables-1">Add new variables</a></h2><p>Use the <code>@transform</code> function to add a column to an existing dataset:</p><pre><code class="language-julia">@transform flights {Speed = :Distance / :AirTime * 60}</code></pre><h2><a class="nav-anchor" id="Reduce-variables-to-values-1" href="#Reduce-variables-to-values-1">Reduce variables to values</a></h2><p>To get the average delay, we first filter away datapoints where <code>ArrDelay</code> is missing, then group by <code>:Dest</code>, select <code>:ArrDelay</code> and compute the mean:</p><pre><code class="language-julia">using Statistics
 @groupby flights :Dest {mean(skipmissing(:ArrDelay))}</code></pre><pre><code class="language-none">Table with 116 rows, 2 columns:
-Dest   mean(dropna(ArrDelay))
+Dest   mean(skipmissing(ArrDelay))
 ─────────────────────────────
 &quot;ABQ&quot;  7.22626
 &quot;AEX&quot;  5.83944
